login and password for msn

--- a/index.html
+++ b/index.html
@@ -707,6 +707,8 @@
 
                 <div class="modal-work__text">
                     <p>My own social network created</p>
+                    <b>Login: free@samuraijs.com</b><br>
+                    <b>Password: free</b>
                     <p>Technologies I used:</p>
                     <ul>
                         <li>React create APP</li>
